--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Recommender System</title>
     <link href="inc/datatables/datatables.min.css" rel="stylesheet">
     <link href="inc/bootstrap/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style.css">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="inc/tourguide/tour.min.css">
+    <link href="style.css" rel="stylesheet" >
 </head>
 
 <body class="mb-5" data-bs-theme="light">
@@ -26,7 +26,7 @@
     <div class="container text-center">
 
         <div class="row">
-            <div class="col-xl-2 col-lg-3 col-md-4 col-sm-12 mt-3">
+            <div id="config-card" class="col-xl-2 col-lg-3 col-md-4 col-sm-12 mt-3">
                 <div class="card">
                     <div class="card-header">
                         Configuración
@@ -69,7 +69,7 @@
                             <button id="btn-stop" type="button" class="btn btn-danger" data-bs-toggle="tooltip" data-bs-title="Detener entrenamiento" disabled><i class="bi bi-stop-fill m-2"></i></button>
                             <button id="btn-start" type="button" class="btn btn-success" data-bs-toggle="tooltip" data-bs-title="Comenzar entrenamiento" disabled><i class="bi bi-play-fill m-2"></i></button>
                         </div>
-                        <div style="display: grid;" data-bs-toggle="tooltip" data-bs-title="Reiniciar configuración"><button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#resetModal"><i class="bi bi-arrow-clockwise m-2"></i></button></div>
+                        <div id="btn-reset-modal" style="display: grid;" data-bs-toggle="tooltip" data-bs-title="Reiniciar configuración"><button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#resetModal"><i class="bi bi-arrow-clockwise m-2"></i></button></div>
                         
                         <!-- Modal -->
                         <div class="modal fade" id="resetModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -97,7 +97,7 @@
             </div>
             <div class="col-xl-10 col-lg-9 col-md-8 col-sm-12">
 
-                <div class="col-sm-12 mt-3">
+                <div id="progress-card" class="col-sm-12 mt-3">
                     <div class="card ">
                         <div class="card-header">
                             Progreso
@@ -115,7 +115,7 @@
 
 
                 <div class="row">
-                    <div class="col-sm-12 col-xl-6  mt-3">
+                    <div id="emb-card" class="col-sm-12 col-xl-6  mt-3">
                         <div class="card" style="background: white;">
                             <div class="card-header">
                                 Embeddings
@@ -127,7 +127,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-xl-6  mt-3">
+                    <div id="loss-card" class="col-sm-12 col-xl-6  mt-3">
                         <div class="card" style="background: white;">
                             <div class="card-header">
                                 Evolución entrenamiento
@@ -141,7 +141,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-12 mt-3">
+                <div id="console-card" class="col-sm-12 mt-3">
                     <div class="card ">
                         <div class="card-header">
                             Consola
@@ -151,18 +151,18 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-12 mt-3">
+                    <div id="new-user-card" class="col-12 mt-3">
                             <div class="card">
                                 <div class="card-header">
                                     Crear usuario
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-6 col-lg-4 col-xl-3 mt-3">
-                                        <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                                            <button id="btn-usr-load" type="button" class="btn btn-outline-primary"><i class="bi bi-cloud-upload m-2"></i></button>
-                                            <button id="btn-usr-save" type="button" class="btn btn-outline-primary"><i class="bi bi-download m-2"></i></button>
+                                    <div id="new-user-buttons" class="col-sm-6 col-lg-4 col-xl-3 mt-3">
+                                        <div class="btn-group" role="group">
+                                            <button id="btn-usr-load" type="button" class="btn btn-primary" data-bs-toggle="tooltip" data-bs-title="Importar notas"><i class="bi bi-upload m-2"></i></button>
+                                            <button id="btn-usr-save" type="button" class="btn btn-primary" data-bs-toggle="tooltip" data-bs-title="Exportar notas"><i class="bi bi-download m-2"></i></button>
                                         </div>
-                                        <button id="btn-usr-clean" type="button" class="btn btn-outline-danger"><i class="bi bi-trash3 m-2"></i></button>
+                                        <button id="btn-usr-clean" type="button" class="btn btn-danger" data-bs-toggle="tooltip" data-bs-title="Eliminar notas"><i class="bi bi-x-circle-fill m-2"></i></button>
 
                                     </div>
                                 </div>
@@ -197,7 +197,7 @@
     <script src="inc/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="inc/datatables/datatables.min.js"></script>
     <script src="inc/plotly/plotly-latest.min.js"></script>
-
+    <script src="inc/tourguide/tour.js"></script>
     <script type="module" src="script.js"></script>
 
 </body>
